Modified some calls of the "$(exit)" command

--- a/install/.Bash-utils/config/modules/Hardware/module.conf
+++ b/install/.Bash-utils/config/modules/Hardware/module.conf
@@ -42,7 +42,7 @@ __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MOD
 
     BU.ModuleInit.AskPrintLog;
 
-    BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+    BU.ModuleInit.Exit 1; return "${?}";
 };
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}" 'Dirpath' \
@@ -85,7 +85,7 @@ __BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH="$(BU.ModuleInit.FindPath "$
 
     BU.ModuleInit.AskPrintLog;
 
-    BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+    BU.ModuleInit.Exit 1; return "${?}";
 };
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH' "${__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH}" 'Dirpath' \
