--- a/install/.Bash-utils/config/modules/main/ColorsBG.conf
+++ b/install/.Bash-utils/config/modules/main/ColorsBG.conf
@@ -52,9 +52,9 @@ __BU_MAIN_COLOR_BG_AQUA="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_AQUA}";
@@ -80,9 +80,9 @@ __BU_MAIN_COLOR_BG_BLACK="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_COD
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_BLACK}";
@@ -108,9 +108,9 @@ __BU_MAIN_COLOR_BG_BLUE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     BU.ModuleInit.MsgAbort;
 
-     BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_BLUE}";
 
@@ -136,9 +136,9 @@ __BU_MAIN_COLOR_BG_CYAN="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_CYAN}";
@@ -164,9 +164,9 @@ __BU_MAIN_COLOR_BG_FUCHSIA="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_C
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_FUCHSIA}";
@@ -190,9 +190,9 @@ __BU_MAIN_COLOR_BG_GRAY="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_GRAY}";
@@ -220,9 +220,9 @@ __BU_MAIN_COLOR_BG_GREEN="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_COD
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_GREEN}";
@@ -248,9 +248,9 @@ __BU_MAIN_COLOR_BG_LIME="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_LIME}";
@@ -275,9 +275,9 @@ __BU_MAIN_COLOR_BG_MAROON="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_MAROON}";
@@ -305,9 +305,9 @@ __BU_MAIN_COLOR_BG_NAVY="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_NAVY}";
@@ -333,9 +333,9 @@ __BU_MAIN_COLOR_BG_OLIVE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_COD
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_OLIVE}";
@@ -359,9 +359,9 @@ __BU_MAIN_COLOR_BG_ORANGE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_ORANGE}";
@@ -388,9 +388,9 @@ __BU_MAIN_COLOR_BG_PINK="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_PINK}";
@@ -415,9 +415,9 @@ __BU_MAIN_COLOR_BG_PURPLE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_PURPLE}";
@@ -441,9 +441,9 @@ __BU_MAIN_COLOR_BG_RED="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_RED}";
@@ -468,9 +468,9 @@ __BU_MAIN_COLOR_BG_SALMON="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_SALMON' "$(basename "${BASH_SOURCE[0]}")"   "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;  BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.MsgAbort;  BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_SALMON}";
@@ -495,9 +495,9 @@ __BU_MAIN_COLOR_BG_SILVER="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_SILVER}";
@@ -522,9 +522,9 @@ __BU_MAIN_COLOR_BG_TAN="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_TAN}";
@@ -549,9 +549,9 @@ __BU_MAIN_COLOR_BG_TEAL="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_TEAL' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;  BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.MsgAbort;  BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_TEAL}";
@@ -576,9 +576,9 @@ __BU_MAIN_COLOR_BG_TURQUOISE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_TURQUOISE}";    printf "%s"     "${__BU_MAIN_COLOR_TXT_BLACK}";
@@ -602,9 +602,9 @@ __BU_MAIN_COLOR_BG_VIOLET="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_VIOLET}";
@@ -631,9 +631,9 @@ __BU_MAIN_COLOR_BG_WHITE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_COD
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_WHITE}";
@@ -659,9 +659,9 @@ __BU_MAIN_COLOR_BG_YELLOW="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_YELLOW}";
@@ -693,9 +693,9 @@ __BU_MAIN_COLOR_BG_CMD="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_CMD}";
@@ -720,9 +720,9 @@ __BU_MAIN_COLOR_BG_ERROR="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_COD
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_ERROR}";
@@ -747,9 +747,9 @@ __BU_MAIN_COLOR_BG_FUNCTION="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_FUNCTION}";
@@ -777,9 +777,9 @@ __BU_MAIN_COLOR_BG_HIGHLIGHT="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_HIGHLIGHT}";
@@ -808,9 +808,9 @@ __BU_MAIN_COLOR_BG_NEWSTEP="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_C
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_NEWSTEP}";
@@ -837,9 +837,9 @@ __BU_MAIN_COLOR_BG_PATH="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_PATH' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_PATH}";
@@ -864,9 +864,9 @@ __BU_MAIN_COLOR_BG_SUCCESS="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_C
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_SUCCESS}";
@@ -894,9 +894,9 @@ __BU_MAIN_COLOR_BG_VAR="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_VAR}";
@@ -924,9 +924,9 @@ __BU_MAIN_COLOR_BG_WARNING="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_C
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_BG_WARNING}";
