--- a/install/.Bash-utils/config/modules/main/ColorsText.conf
+++ b/install/.Bash-utils/config/modules/main/ColorsText.conf
@@ -56,9 +56,9 @@ __BU_MAIN_COLOR_TXT_AQUA="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_AQUA}";
@@ -83,9 +83,9 @@ __BU_MAIN_COLOR_TXT_BLACK="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_BLACK}";
@@ -110,9 +110,9 @@ __BU_MAIN_COLOR_TXT_BLUE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_BLUE}";
@@ -139,9 +139,9 @@ __BU_MAIN_COLOR_TXT_CYAN="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_CYAN}";
@@ -166,9 +166,9 @@ __BU_MAIN_COLOR_TXT_FUCHSIA="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLO
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_FUCHSIA}";
@@ -193,9 +193,9 @@ __BU_MAIN_COLOR_TXT_GRAY="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_GRAY}";
@@ -222,9 +222,9 @@ __BU_MAIN_COLOR_TXT_GREEN="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_GREEN}";
@@ -249,9 +249,9 @@ __BU_MAIN_COLOR_TXT_LIME="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_LIME}";
@@ -276,9 +276,9 @@ __BU_MAIN_COLOR_TXT_MAROON="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_MAROON}";
@@ -305,9 +305,9 @@ __BU_MAIN_COLOR_TXT_NAVY="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_NAVY}";
@@ -332,9 +332,9 @@ __BU_MAIN_COLOR_TXT_OLIVE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_OLIVE}";
@@ -359,9 +359,9 @@ __BU_MAIN_COLOR_TXT_ORANGE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_ORANGE}";
@@ -388,9 +388,9 @@ __BU_MAIN_COLOR_TXT_PINK="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_PINK}";
@@ -415,9 +415,9 @@ __BU_MAIN_COLOR_TXT_PURPLE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_PURPLE}";
@@ -442,9 +442,9 @@ __BU_MAIN_COLOR_TXT_RED="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CO
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_RED}";
@@ -471,9 +471,9 @@ __BU_MAIN_COLOR_TXT_SALMON="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_SALMON}";
@@ -498,9 +498,9 @@ __BU_MAIN_COLOR_TXT_SILVER="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_SILVER}";
@@ -525,9 +525,9 @@ __BU_MAIN_COLOR_TXT_TAN="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CO
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_TAN}";
@@ -554,9 +554,9 @@ __BU_MAIN_COLOR_TXT_TEAL="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_TEAL}";
@@ -581,9 +581,9 @@ __BU_MAIN_COLOR_TXT_TURQUOISE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_CO
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_TURQUOISE}";
@@ -608,9 +608,9 @@ __BU_MAIN_COLOR_TXT_VIOLET="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_VIOLET}";
@@ -637,9 +637,9 @@ __BU_MAIN_COLOR_TXT_WHITE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_WHITE}";
@@ -664,9 +664,9 @@ __BU_MAIN_COLOR_TXT_YELLOW="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_YELLOW}";
@@ -699,9 +699,9 @@ __BU_MAIN_COLOR_TXT_CMD="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CO
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_CMD}";
 
@@ -725,9 +725,9 @@ __BU_MAIN_COLOR_TXT_ERROR="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_ERROR}";
@@ -752,9 +752,9 @@ __BU_MAIN_COLOR_TXT_FUNCTION="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COL
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_FUNCTION}";
@@ -779,9 +779,9 @@ __BU_MAIN_COLOR_TXT_HIGHLIGHT="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_CO
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_HIGHLIGHT}";
@@ -806,9 +806,9 @@ __BU_MAIN_COLOR_TXT_NEWSTEP="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLO
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_NEWSTEP}";
@@ -833,9 +833,9 @@ __BU_MAIN_COLOR_TXT_PATH="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_PATH}";
@@ -860,9 +860,9 @@ __BU_MAIN_COLOR_TXT_SUCCESS="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLO
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_SUCCESS}";
@@ -887,9 +887,9 @@ __BU_MAIN_COLOR_TXT_VAR="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CO
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_VAR}";
@@ -914,9 +914,9 @@ __BU_MAIN_COLOR_TXT_WARNING="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLO
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 
 }; [ "${__BU_MODULE_INIT_MSG_ARRAY_MODE}" == '--mode-log-full' ] && {
     printf "%s" "${__BU_MAIN_COLOR_TXT_WARNING}";
