--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -83,7 +83,7 @@ if [ ! -d "${__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH}" ]; then
         echo >&2; echo "UNABLE TO CREATE THE PROJECT'S TEMPORARY FOLDER'S PARENT DIRECTORY « ${__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH} » !" >&2;
         echo >&2;
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 fi
 
@@ -111,10 +111,10 @@ __BU_MAIN_PROJECT_FILE_PATH="$(BU.Main.ModConfig.Project.GetProjectFilePath "${_
     BU.ModuleInit.MsgAbort;
 
     BU.ModuleInit.AskPrintLog >&2 || {
-        if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
-    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    BU.ModuleInit.Exit 1; return "${?}";
 };
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_FILE_PATH' "${__BU_MAIN_PROJECT_FILE_PATH}" 'Filepath' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_FILE_PATH__VAR}" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
