--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -56,9 +56,9 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_BIN_DIR_PATH' \
@@ -83,9 +83,9 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_DOCS_DIR_PATH' \
@@ -110,9 +110,9 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_DIR_PATH' \
@@ -137,9 +137,9 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_RES_DIR_PATH' \
@@ -181,9 +181,9 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH' \
@@ -206,9 +206,9 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
 
     };
 
@@ -233,9 +233,9 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_DEVTOOLS_DSK' \
@@ -260,9 +260,9 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_DEVTOOLS_IMG' \
@@ -287,9 +287,9 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_DEVTOOLS_SRC' \
         "${__BU_MAIN_MODULE_DEVTOOLS_SRC}" 'Dirpath' \
@@ -313,9 +313,9 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_DEVTOOLS_TRANSL' \
@@ -357,9 +357,9 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH' \
@@ -383,9 +383,9 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_MOD_DIR_PATH' \
@@ -409,9 +409,9 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_LANG_DIR_PATH' \
@@ -457,9 +457,9 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_COLORS_PATH' \
@@ -484,9 +484,9 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_COLORS_PATH' \
@@ -511,9 +511,9 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_COLORS_PATH' \
@@ -538,9 +538,9 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_EXIT_PATH' \
@@ -564,9 +564,9 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_FILESYSTEM_PATH' \
@@ -591,9 +591,9 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_OS_PATH' \
@@ -618,9 +618,9 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_INIT_PATH' \
@@ -645,9 +645,9 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_STATUS_PATH' \
@@ -672,9 +672,9 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_TEXT_PATH' \
@@ -699,9 +699,9 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_TIME_PATH' \
@@ -744,9 +744,9 @@ function BU.Main.ModConfig.Module.MainModuleInitializerPath() {
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FILE_INITIALIZER_FILE_PATH' "${__BU_MAIN_MODULE_LIB_FILE_INITIALIZER_FILE_PATH}" \
@@ -844,9 +844,9 @@ else
 
             BU.ModuleInit.MsgAbort;
 
-            BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+            BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-            BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+            BU.ModuleInit.Exit 1; return "${?}";
 
 			return 1;
         fi
@@ -867,9 +867,9 @@ else
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
 
 		return 1;
 
@@ -893,9 +893,9 @@ else
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
 
 		return 1;
 
@@ -914,9 +914,9 @@ else
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
 
 		return 1;
     fi
