--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -213,9 +213,9 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     printf "%s" "${__BU_MAIN_TXT_FMT_BLINK}";
@@ -237,9 +237,9 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     printf "%s" "${__BU_MAIN_TXT_FMT_BLINK_RESET}";
@@ -261,9 +261,9 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     printf "%s" "${__BU_MAIN_TXT_FMT_BOLD}";
@@ -285,9 +285,9 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     printf "%s" "${__BU_MAIN_TXT_FMT_BOLD_RESET}";
@@ -309,9 +309,9 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     printf "%s" "${__BU_MAIN_TXT_FMT_DIM}";
@@ -333,9 +333,9 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     printf "%s" "${__BU_MAIN_TXT_FMT_DIM_RESET}";
@@ -355,9 +355,9 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_HIDDEN' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_hidden_lineno}";
 
-        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     printf "%s" "${__BU_MAIN_TXT_FMT_HIDDEN}";
@@ -379,9 +379,9 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     printf "%s" "${__BU_MAIN_TXT_FMT_HIDDEN_RESET}";
@@ -401,9 +401,9 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_ITALIC' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_italic_lineno}";
 
-        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     printf "%s" "${__BU_MAIN_TXT_FMT_ITALIC}";
@@ -423,9 +423,9 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_ITALIC_RESET' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_italic_reset_lineno}";
 
-        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     printf "%s" "${__BU_MAIN_TXT_FMT_ITALIC_RESET}";
@@ -445,9 +445,9 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_RESET' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_reset_lineno}";
 
-        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     printf "%s" "${__BU_MAIN_TXT_FMT_RESET}";
@@ -467,9 +467,9 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_STRIKETHROUGH' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_strikethrough_lineno}";
 
-        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+        BU.ModuleInit.Exit 1; return "${?}";
 
 
     };
@@ -491,9 +491,9 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_strikethrough_reset_lineno}";
 
-        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     printf "%s" "${__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET}";
@@ -513,9 +513,9 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_UNDERLINE' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_underline_lineno}";
 
-        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     printf "%s" "${__BU_MAIN_TXT_FMT_UNDERLINE}";
@@ -535,9 +535,9 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_UNDERLINE_RESET' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_underline_reset_lineno}";
 
-        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
     printf "%s" "${__BU_MAIN_TXT_FMT_UNDERLINE_RESET}";
