--- a/install/.Bash-utils/config/modules/Software/Software.module.conf
+++ b/install/.Bash-utils/config/modules/Software/Software.module.conf
@@ -39,9 +39,9 @@ function BU.Software.ModConfig.Module.SoftwareModuleConfigFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+        BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-        BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+        BU.ModuleInit.Exit 1; return "${?}";
     };
 
 
@@ -77,9 +77,9 @@ __BU_SOFTWARE_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_SOFTWARE
 
     BU.ModuleInit.MsgAbort;
 
-    BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+    BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
-    BU.ModuleInit.IsInScript && BU.ModuleInit.Exit 1; return 1;
+    BU.ModuleInit.Exit 1; return "${?}";
 };
 
 DisplayInitGlobalVarsInfos '' "" '' "";
