--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -15,6 +15,9 @@
 
 # Main module's "config" folder's content.
 
+# Featured function(s) and file(s) by module(s) and from the "functions" folder :
+#   - Feel free to call a function if it is needed for your contribution.
+
 # shellcheck disable=SC2059
 function BU.Main.ModConfig.Module.MainModuleConfigFolderContent.Optimize() { printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__MODULE__MainModuleConfigFolderContentOptimize__FNCT}" "${1}"; }
 
@@ -28,10 +31,15 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent.Optimize() { pri
 
 ## BASH UTIILS SUB-FOLDERS PATHS
 
-#
+# ····························································
 #
 
-#
+# Featured function(s) and file(s) by module(s) and from the "functions" folder :
+#   - BU.ModuleInit.AskPrintLog()                   -> Modules initializer script
+#   - BU.ModuleInit.DisplayInitGlobalVarsInfos()    -> Modules initializer script
+#   - BU.ModuleInit.Exit()                          -> Modules initializer script
+#   - BU.ModuleInit.MsgAbort()                      -> Modules initializer script
+#   - BU.ModuleInit.PrintLogError()                 -> Modules initializer script
 
 # shellcheck disable=SC2016,SC2059
 function BU.Main.ModConfig.Module.BUSubFoldersPaths()
@@ -153,10 +161,15 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
 ## BASH UTILS DEV-TOOLS PATHS
 
-#
+# ····························································
 #
 
-#
+# Featured function(s) and file(s) by module(s) and from the "functions" folder :
+#   - BU.ModuleInit.AskPrintLog()                   -> Modules initializer script
+#   - BU.ModuleInit.DisplayInitGlobalVarsInfos()    -> Modules initializer script
+#   - BU.ModuleInit.Exit()                          -> Modules initializer script
+#   - BU.ModuleInit.MsgAbort()                      -> Modules initializer script
+#   - BU.ModuleInit.PrintLogError()                 -> Modules initializer script
 
 # shellcheck disable=SC2016,SC2059
 function BU.Main.ModConfig.Module.BUDevToolsPaths()
@@ -329,10 +342,15 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
 ## "lib" FOLDER'S CONTENT.
 
-#
+# ··························································································
 #
 
-#
+# Featured function(s) and file(s) by module(s) and from the "functions" folder :
+#   - BU.ModuleInit.AskPrintLog()                   -> Modules initializer script
+#   - BU.ModuleInit.DisplayInitGlobalVarsInfos()    -> Modules initializer script
+#   - BU.ModuleInit.Exit()                          -> Modules initializer script
+#   - BU.ModuleInit.MsgAbort()                      -> Modules initializer script
+#   - BU.ModuleInit.PrintLogError()                 -> Modules initializer script
 
 # shellcheck disable=SC2016,SC2059
 function BU.Main.ModConfig.Module.BULibFolderContent()
@@ -431,10 +449,15 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
 
 ## MAIN MODULE'S "config" FOLDER'S CONTENT
 
-#
+# ····························································
 #
 
-#
+# Featured function(s) and file(s) by module(s) and from the "functions" folder :
+#   - BU.ModuleInit.AskPrintLog()                   -> Modules initializer script
+#   - BU.ModuleInit.DisplayInitGlobalVarsInfos()    -> Modules initializer script
+#   - BU.ModuleInit.Exit()                          -> Modules initializer script
+#   - BU.ModuleInit.MsgAbort()                      -> Modules initializer script
+#   - BU.ModuleInit.PrintLogError()                 -> Modules initializer script
 
 # shellcheck disable=SC2016,SC2059
 function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
@@ -715,12 +738,15 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
 ## MAIN MODULE'S INITIALIZER PATH
 
+# ·········································································································································
 # Declaring the variables inside a function to prevent the displaying of the Shellcheck info messages when Shellchecking the compiled file.
 
-#
-#
-
-#
+# Featured function(s) and file(s) by module(s) and from the "functions" folder :
+#   - BU.ModuleInit.AskPrintLog()                   -> Modules initializer script
+#   - BU.ModuleInit.DisplayInitGlobalVarsInfos()    -> Modules initializer script
+#   - BU.ModuleInit.Exit()                          -> Modules initializer script
+#   - BU.ModuleInit.MsgAbort()                      -> Modules initializer script
+#   - BU.ModuleInit.PrintLogError()                 -> Modules initializer script
 
 # shellcheck disable=SC2016,SC2059
 function BU.Main.ModConfig.Module.MainModuleInitializerPath() {
